[package]
name = "oddjobs"
version = "0.1.0"
authors = ["deer <https://codeberg.org/deer>"]
edition = "2018"
description = "Pre-Big-Bang (pre-BB) Maplestory odd jobs"
repository = "https://codeberg.org/deer/oddjobs"
readme = "README.md"
keywords = ["maplestory", "markdown", "json", "challenge run"]
categories = ["games"]
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0.61"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
