[package]
name = "odd_jobs"
version = "0.2.0"
authors = ["deer <capreolina@protonmail.ch>"]
edition = "2018"
description = "Pre-Big-Bang (pre-BB) MapleStory odd jobs"
repository = "https://codeberg.org/oddjobs/odd_jobs"
readme = "README.md"
keywords = ["maplestory", "markdown", "json", "challenge run"]
categories = ["games"]
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
