[package]
name = "odd_jobs"
version = "0.2.1"
authors = ["deer <capreolina@protonmail.ch>"]
edition = "2021"
description = "Pre-Big-Bang (pre-BB) MapleStory odd jobs"
repository = "https://codeberg.org/oddjobs/odd_jobs"
readme = "README.md"
keywords = ["maplestory", "markdown", "json", "challenge run"]
categories = ["games"]
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
strip = true
